<resources>
    <string name="app_name">watchIT</string>
    <string name="now_playing">NowPlaying</string>
    <string name="up_comming">UpComing</string>
    <string name="top_rated">TopRated</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toolbar_title">Movies</string>
    <string name="favorites">favorites</string>
    <string name="search">Search</string>
    <string name="check_favorite">check Favorite</string>
    <string name="movie_name">Movie Name</string>
    <string name="movie_TagLine">movie TagLine</string>
    <string name="recommended_movies">Recommended Movies :</string>
    <string name="similar_movies">similar Movies</string>
    <string name="vote_average">%1$s / 10</string>
    <string name="number_of_voters">%1$s votes</string>

</resources>
