<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <item
        android:id="@+id/top_rated"
        android:title="@string/top_rated"
        android:icon="@drawable/ic_top_rated"
        app:showAsAction="ifRoom"
       />
    <item
        android:id="@+id/up_comming"
        android:title="@string/up_comming"
        android:icon="@drawable/ic_upcoming"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/now_playing"
        android:title="@string/now_playing"
        android:icon="@drawable/ic_now_playing"
        app:showAsAction="ifRoom"
        />


    <item
        android:id="@+id/favorites"
        android:title="@string/favorites"
        android:icon="@drawable/ic_heart"
        app:showAsAction="ifRoom"
        />







</menu>